css/style.css
body {
    background-color: black;
	/* Use a system font, if none are available use an available sans-sarif   font */
	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
		Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
	margin: 0;
  height: 100vh;
  display: flex;
  flex-direction: column;
}

section.board {
  display: grid;
  grid-template-rows: repeat(3, 10vmin);
  grid-template-columns: repeat(3, 10vmin);
  grid-gap: 0vmin;
  margin: 0 auto;
}

div {
  border: 3px solid white;
  font-size: 8vmin;
  text-align: center;
  vertical-align: middle;
  color: white;
}

h1 {
text-align: center;
color: white;
font-family: 'Londrina Sketch', cursive;
font-size: 10vmin;
margin-bottom: 0;
}

h2 {
text-align: center;
color: white;
font-size: 3vmin;
}

button {
  width: 15vmin;
  height: 5vmin;
  margin: 20px auto;
  padding: 5px;
  background: transparent;
  color: black;
  border: white 0px solid;
  border-radius: 30px;
  background: linear-gradient(to bottom right, rgb(246, 229, 83), rgb(244, 12, 51));
  /* font-size: 3vmin; */

}

button:hover {
  font-weight: bold;
  /* width: 18vmin; */
}

.blue {
  color:rgb(0, 255, 247);
  font-family: 'Fredericka the Great', cursive;
}

.green {
  color: greenyellow;
  font-family: 'Fredericka the Great', cursive;
}

div#buttons {
  display: inline;
  border: none
}

div.scoreboard {
  border: 0px black solid;
}

div.scoreboard div{
  font-size: 3vmin;
  border: 0ch;
  margin-bottom: 1vmin
}

